[tool.poetry]
name = "sammask"
version = "0.1.0"
description = "Masking tool based on SAM (Meta AI)"
authors = ["Pieter Tolsma <epieter.tolsma@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
segment-anything = {git = "https://github.com/facebookresearch/segment-anything.git"}
opencv-python = "^4.7.0.72"
pycocotools = "^2.0.6"
matplotlib = "^3.7.1"
onnxruntime = "^1.14.1"
onnx = "^1.13.1"
tqdm = "^4.65.0"
scipy = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
